<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    tools:context=".ui.SignInActivity">

    <TextView
        android:id="@+id/textViewSignIn"
        style="@style/Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/sign_in_caption"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textView_first_name"
        style="@style/EditTextDefault"
        android:layout_width="0dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/first_name_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSignIn" />

    <EditText
        android:id="@+id/textView_last_name"
        style="@style/EditTextDefault"
        android:layout_width="0dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/last_name_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSignIn" />

    <EditText
        android:id="@+id/textView_email"
        style="@style/EditTextDefault"
        android:layout_width="0dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSignIn" />

    <Button
        android:id="@+id/buttonSignIn"
        style="@style/ButtonDefault"
        android:layout_width="0dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="40dp"
        android:text="@string/sign_in_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSignIn" />

    <TextView
        android:id="@+id/textHaveAccount"
        android:fontFamily="@font/montserrat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:padding="0dp"
        android:text="@string/have_account_text"
        android:textColor="@color/text_color"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/buttonSignIn"
        app:layout_constraintTop_toBottomOf="@+id/buttonSignIn" />

    <TextView
        android:id="@+id/linkLogIn"
        android:fontFamily="@font/montserrat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:background="@android:color/transparent"
        android:padding="0dp"
        android:text="@string/log_in_button"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/transparent_button_text_color"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/textHaveAccount"
        app:layout_constraintTop_toBottomOf="@+id/buttonSignIn" />

    <TextView
        android:id="@+id/buttonSignInApple"
        android:fontFamily="@font/montserrat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:text="@string/sign_in_apple"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/buttonSignInGoogle"
        android:fontFamily="@font/montserrat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/sign_in_google"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/buttonSignInApple"
        app:layout_constraintStart_toStartOf="@+id/buttonSignInApple" />

    <ImageView
        android:id="@+id/iconApple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonSignInApple"
        app:layout_constraintEnd_toStartOf="@+id/buttonSignInApple"
        app:layout_constraintTop_toTopOf="@+id/buttonSignInApple"
        app:srcCompat="@drawable/ic_apple" />

    <ImageView
        android:id="@+id/iconGoogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonSignInGoogle"
        app:layout_constraintEnd_toStartOf="@+id/buttonSignInGoogle"
        app:layout_constraintTop_toTopOf="@+id/buttonSignInGoogle"
        app:srcCompat="@drawable/ic_google" />

</androidx.constraintlayout.widget.ConstraintLayout>