<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    tools:context=".ui.LoginActivity">

    <TextView
        android:id="@+id/textViewLogin"
        style="@style/Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:text="@string/login_caption"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textView_login"
        style="@style/EditTextDefault"
        android:layout_width="0dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/first_name_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLogin" />

    <EditText
        android:id="@+id/textView_password"
        style="@style/EditTextDefault"
        android:layout_width="0dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLogin" />

    <Button
        android:id="@+id/buttonLogIn"
        style="@style/ButtonDefault"
        android:layout_width="0dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="40dp"
        android:text="@string/log_in_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLogin" />

    <CheckBox
        android:id="@+id/checkBox_password_visibility"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="15dp"
        android:background="@android:color/transparent"
        android:button="@drawable/password_visibility_checkbox"
        android:checked="true"
        android:clickable="true"
        android:elevation="3dp"
        android:padding="5dp"
        android:scaleX="0.7"
        android:scaleY="0.7"
        android:text="CheckBox"
        app:layout_constraintBottom_toBottomOf="@+id/textView_password"
        app:layout_constraintEnd_toEndOf="@+id/textView_password"
        app:layout_constraintTop_toTopOf="@+id/textView_password" />

</android.support.constraint.ConstraintLayout>